--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-gsapify-router",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "Angular UI-Router animation directive allowing configuration of state transitions using GSAP",
   "main": "angular-gsapify-router.js",
   "ignore": [
@@ -9,8 +9,8 @@
     "!README.md"
   ],
   "dependencies": {
-    "angular": "~1.2.0",
-    "angular-animate": "~1.2.0",
+    "angular": ">=1.2.0",
+    "angular-animate": ">=1.2.0",
     "gsap": "~1.13.0",
     "angular-ui-router": "~0.2.11"
   },
